# ChangeLog for app-dicts/myspell-id
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-dicts/myspell-id/ChangeLog,v 1.30 2015/02/28 13:30:05 ago Exp $

  28 Feb 2015; Agostino Sarubbo <ago@gentoo.org> myspell-id-2.0.ebuild:
  Stable for ia64, wrt bug #534836

  27 Feb 2015; Agostino Sarubbo <ago@gentoo.org> myspell-id-2.0.ebuild:
  Stable for sparc, wrt bug #534836

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> myspell-id-2.0.ebuild:
  Stable for alpha, wrt bug #534836

  26 Jan 2015; Agostino Sarubbo <ago@gentoo.org> myspell-id-2.0.ebuild:
  Stable for x86, wrt bug #534836

  18 Jan 2015; Agostino Sarubbo <ago@gentoo.org> myspell-id-2.0.ebuild:
  Stable for ppc64, wrt bug #534836

  17 Jan 2015; Agostino Sarubbo <ago@gentoo.org> myspell-id-2.0.ebuild:
  Stable for ppc, wrt bug #534836

  13 Jan 2015; Jeroen Roovers <jer@gentoo.org> myspell-id-2.0.ebuild:
  Stable for HPPA (bug #534836).

  11 Jan 2015; Markus Meier <maekke@gentoo.org> myspell-id-2.0.ebuild:
  arm stable, bug #534836

  09 Jan 2015; Agostino Sarubbo <ago@gentoo.org> myspell-id-2.0.ebuild:
  Stable for amd64, wrt bug #534836

*myspell-id-2.0 (15 Oct 2014)

  15 Oct 2014; Michael Palimaka <kensington@gentoo.org> +myspell-id-2.0.ebuild:
  Version bump.

  05 Jan 2014; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due http://gentoo.2317880.n4.nabble.com/app-dicts-herd-is-empty-
  td271273.html

*myspell-id-1.0 (23 Jul 2012)

  23 Jul 2012; Tomáš Chvátal <scarabeus@gentoo.org> +myspell-id-1.0.ebuild,
  -myspell-id-20060316.ebuild:
  Version bump to latest upstream version. Remove newer/older.

  17 May 2012; Alexis Ballier <aballier@gentoo.org> myspell-id-20060316.ebuild:
  keyword ~amd64-fbsd

  27 Sep 2010; Mart Raudsepp <leio@gentoo.org> myspell-id-20060316.ebuild:
  Add ~mips

  22 May 2010; Raúl Porcel <armin76@gentoo.org> myspell-id-20060316.ebuild:
  alpha/arm/ia64/sh/sparc stable
