@@ -1,6 +1,9 @@
 # ChangeLog for app-dicts/myspell-id
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/myspell-id/ChangeLog,v 1.30 2015/02/28 13:30:05 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/myspell-id/ChangeLog,v 1.31 2015/02/28 13:36:56 mrueg Exp $
+
+  28 Feb 2015; Manuel Rüger <mrueg@gentoo.org> -myspell-id-1.0.ebuild:
+  Remove old.
 
   28 Feb 2015; Agostino Sarubbo <ago@gentoo.org> myspell-id-2.0.ebuild:
   Stable for ia64, wrt bug #534836
